--- a/07-spring-boot-spring-mvc/01-thymleafdemo-helloworld/src/main/resources/templates/helloWorld.html
+++ b/07-spring-boot-spring-mvc/01-thymleafdemo-helloworld/src/main/resources/templates/helloWorld.html
@@ -15,5 +15,8 @@ Hello World of Spring
 
 Student Name: <span th:text ="${param.studentName}"/>
 
+<br>    <br>
+
+The message: <span th:text="${message}" />
 </body>
 </HTML>
