--- a/07-spring-boot-spring-mvc/01-thymleafdemo-helloworld/src/main/resources/templates/helloWorld.html
+++ b/07-spring-boot-spring-mvc/01-thymleafdemo-helloworld/src/main/resources/templates/helloWorld.html
@@ -13,10 +13,12 @@ Hello World of Spring
 
 <br>    <br>
 
-Student Name: <span th:text ="${param.studentName}"/>
+Student Name: <span th:text="${param.studentName}"></span>
+<!--Student Name: <span th:text ="${param.studentName}"/>-->
 
 <br>    <br>
 
-The message: <span th:text="${message}" />
+The message: <span th:text="${message}"></span>
+<!--The message: <span th:text="${message}" />-->
 </body>
 </HTML>
