fetch values from application.properties for country

--- a/07-spring-boot-spring-mvc/01-thymleafdemo-helloworld/src/main/resources/templates/student-form.html
+++ b/07-spring-boot-spring-mvc/01-thymleafdemo-helloworld/src/main/resources/templates/student-form.html
@@ -16,12 +16,8 @@
   Last Name: <input type="text" th:field="*{lastName}" />
   <br> <br>
 
-  <input type="submit" value="Submit">
-
-  <br> <br>
-
   <select th:field="*{country}">
-    <option th:value="Brazil"> Brazil</option>
+    <option th:each="tempCountry: ${countries}" th:value="${tempCountry}" th:text="${tempCountry}"> </option>
     <option th:value="France"> France</option>
     <option th:value="Germany"> Germany</option>
     <option th:value="India"> India</option>
@@ -29,6 +25,12 @@
 
 
   </select>
+
+  <input type="submit" value="Submit">
+
+  <br> <br>
+
+
   
   
 
