added readio button for language

--- a/07-spring-boot-spring-mvc/01-thymleafdemo-helloworld/src/main/resources/templates/student-confirmation.html
+++ b/07-spring-boot-spring-mvc/01-thymleafdemo-helloworld/src/main/resources/templates/student-confirmation.html
@@ -9,7 +9,11 @@
 <h3> Student Confirmation</h3>
 
 The Student is confirmed: <span th:text="${student.firstName} + ' '+ ${student.lastName}"></span>
-
+<br><br>
 The Country is: <span th:text="${student.country}"></span>
+<br><br>
+Favorite Programming Language is: <span th:text="${student.favoriteLanguage}"></span>
+<br><br>
+
 </body>
 </html>
