--- a/07-spring-boot-spring-mvc/01-thymleafdemo-helloworld/src/main/resources/templates/student-form.html
+++ b/07-spring-boot-spring-mvc/01-thymleafdemo-helloworld/src/main/resources/templates/student-form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/html">
 <head>
   <meta charset="UTF-8">
   <title> Student Registration Form</title>
@@ -18,14 +18,18 @@
 
   <select th:field="*{country}">
     <option th:each="tempCountry: ${countries}" th:value="${tempCountry}" th:text="${tempCountry}"> </option>
-    <option th:value="France"> France</option>
-    <option th:value="Germany"> Germany</option>
-    <option th:value="India"> India</option>
-
-
 
   </select>
 
+  <br> <br>
+
+  Favorite Programming Language:
+
+  <input type="radio" th:field="*{favoriteLanguage}" th:value="Go">Go</input>
+  <input type="radio" th:field="*{favoriteLanguage}" th:value="Java">Java</input>
+  <input type="radio" th:field="*{favoriteLanguage}" th:value="Python">Python</input>
+
+  <br> <br>
   <input type="submit" value="Submit">
 
   <br> <br>
