Data binding for radio button and taking list form application.properties

--- a/07-spring-boot-spring-mvc/01-thymleafdemo-helloworld/src/main/resources/templates/student-form.html
+++ b/07-spring-boot-spring-mvc/01-thymleafdemo-helloworld/src/main/resources/templates/student-form.html
@@ -32,9 +32,11 @@
 
   <br> <br>
 
-  <input type="checkbox" th:field="*{favoriteSystems}" th:value="Linux">Linux </input>
-  <input type="checkbox" th:field="*{favoriteSystems}" th:value="macOs">macOS </input>
-  <input type="checkbox" th:field="*{favoriteSystems}" th:value="'Microsoft Windows'">Microsoft Windows</input>
+  <input type="checkbox" th:field="*{favoriteSystems}"
+                         th:each="tempSystem: ${systems}"
+                         th:text="${tempSystem}"
+                         th:value="${tempSystem}"   > </input>
+
 
 
   <input type="submit" value="Submit">
