added mismatch in message.properties

--- a/07-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-form.html
+++ b/07-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-form.html
@@ -18,15 +18,28 @@
 
   Last Name(*): <input type="text" th:field="*{lastName}"/>
 
-  <br><br>
-
 <!--  Add error message (if present)-->
   <span th:if="${#fields.hasErrors('lastName')}"
         th:errors="*{lastName}"
         class="error"></span>
 
     <br><br>
-  <input type="submit" value="Submit">
+
+    Free Passes: <input type="text" th:field="*{freePasses}"/>
+
+    <!--  Add error message (if present)-->
+    <span th:if="${#fields.hasErrors('freePasses')}"
+          th:errors="*{freePasses}"
+          class="error"></span>
+
+    <br><br>
+
+    Postal Code: <input type="text" th:field="*{postalCode}"/>
+    <span th:if="${#fields.hasErrors('postalCode')}"
+          th:errors="*{postalCode}"
+          class="error"></span>
+
+    <input type="submit" value="Submit">
 
 </form>
 
