--- a/07-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-confirmation.html
+++ b/07-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-confirmation.html
@@ -6,5 +6,13 @@
 </head>
 <body>
 The Customer is confirmed: <span th:text="${ customer.firstName+ ' ' + customer.lastName}" ></span>
+<br><br>
+
+Free Passess: <span th:text="${customer.freePasses}" ></span>
+
+<br><br>
+
+Postal Code: <span th:text="${customer.postalCode}" ></span>
+
 </body>
 </html>
