fetch data from db and the show on html

--- a/07-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-confirmation.html
+++ b/07-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-confirmation.html
@@ -14,5 +14,10 @@ Free Passess: <span th:text="${customer.freePasses}" ></span>
 
 Postal Code: <span th:text="${customer.postalCode}" ></span>
 
+<br><br>
+
+Postal Code: <span th:text="${customer.courceCode}" ></span>
+
+
 </body>
 </html>
