--- a/07-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-form.html
+++ b/07-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-form.html
@@ -39,6 +39,12 @@
           th:errors="*{postalCode}"
           class="error"></span>
 
+    <br><br>
+   Course Code: <input type="text" th:field="*{courseCode}"/>
+    <span th:if="${#fields.hasErrors('courseCode')}"
+          th:errors="*{courseCode}"
+          class="error"></span>
+
     <input type="submit" value="Submit">
 
 </form>
