--- a/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
+++ b/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
@@ -32,7 +32,12 @@
       <td th:text="${tempEmployee.firstName}"/>
       <td th:text="${tempEmployee.lastName}"/>
       <td th:text="${tempEmployee.email}"/>
-      <td th:text=""></td>
+      <td>
+        <a th:href="@{/employees/showFormForUpdate(employeeId=${tempEmployee.id})}"
+        class="btn btn-info btn-sm">Update</a>
+        
+
+      </td>
 
     </tr>
     </tbody>
