--- a/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/employee-form.html
+++ b/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/employee-form.html
@@ -17,6 +17,9 @@
     <form th:action="@{/employees/save}"
           th:object="${employee}"  method="POST">
 
+<!--        Add hidden form field to handle the update-->
+        <input type="hidden" th:field="*{id}">
+
         <input type="text" th:field="*{firstName}" class="form-control mb-4 w-25" placeholder="First Name">
 
 
