--- a/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
+++ b/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
@@ -35,8 +35,12 @@
       <td>
         <a th:href="@{/employees/showFormForUpdate(employeeId=${tempEmployee.id})}"
         class="btn btn-info btn-sm">Update</a>
-        
 
+<!--        add delete button-->
+
+        <a th:href="@{/employees/delete(employeeId=${tempEmployee.id})}"
+           class="btn btn-info btn-sm"
+          onclick="(if(!confirm('Are you sure you want to delete this employee?'))) return false">Delete</a>
       </td>
 
     </tr>
