added users for and their roles

--- a/08-spring-boot-spring-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/home.html
+++ b/08-spring-boot-spring-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/home.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Luv2code Company Home Page</title>
+    <title>Luv2code Company Home Page </title>
 </head>
 <body>
-<h2> Lov2code Company Home Page</h2>
+<h2> Lov2code Company Home Page! yooo</h2>
 <hr>
 Welcome to the Luv2code Company Home Page
 </body>
