--- a/08-spring-boot-spring-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/home.html
+++ b/08-spring-boot-spring-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Luv2code Company Home Page </title>
@@ -7,6 +7,13 @@
 <body>
 <h2> Lov2code Company Home Page! yooo</h2>
 <hr>
-Welcome to the Luv2code Company Home Page
+<p>
+    Welcome  to the Luv2code Company Home Page
+</p>
+
+<form action="#" th:action="@{/showMyLoginPage}">
+    <input type="submit" value="Logout"/>
+</form>
+
 </body>
 </html>
