--- a/08-spring-boot-spring-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/fancy-login.html
+++ b/08-spring-boot-spring-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/fancy-login.html
@@ -40,14 +40,16 @@
                                             <!-- Check for logout message -->
 
 
-                                            <div th:if="${param.logout}">
 
-                                                <div class="alert alert-success col-xs-offset-1 col-xs-10">
-                                                    You Have been logged out.
-                                                </div>
 
+                                        </div>
+                                        <div>
+                                        <div th:if="${param.logout}">
+
+                                            <div class="alert alert-success col-xs-offset-1 col-xs-10">
+                                                You Have been logged out.
                                             </div>
-
+                                        </div>
                                         </div>
                                     </div>
                                 </div>
